# agent-deploy-kit

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  RAG.md  README.md  alembic.ini  code_map.md  pyproject.toml
agents/: CLAUDE.md  __init__.py
agents/code_agent/: __init__.py  agent.py  code_agent.ipynb  schemas.py  tools.py
agents/content_build_agent/: agent.py  content_build_agent.ipynb  main.py  tools.py  utils.py
agents/content_build_agent/docs/: subagents.yaml
agents/data_agent/: agent.py  data_agent.ipynb  main.py
agents/data_agent/docs/: local-shell-backend-notes.md
agents/data_agent_langchain/: backend.py  config.py  data_agent_langchain.ipynb  pre_data.py  tools.py
agents/hyper_rag_agent/: faiss.ipynb  graph.py  hyper_rag_agent.ipynb  instance.py  main.py  nodes.py  schemas.py
agents/research_agent/: agent.py  main.py  research_agent.ipynb  tools.py
agents/semantic_search_agent/: __init__.py  agent.py  config.py  instances.py  main.py  middleware.py  reranker.py  semantic_search_agent.ipynb  tools.py  util.py
agents/semantic_search_agent/docs/: optimization.md
agents/sql_agent/: agent.py  instances.py  main.py  sql_agent.ipynb
agents/weather_agent/: __init__.py  agent.py  tools.py
backend/: __init__.py  agent_loader.py  main.py  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_16_075640-6d89c8106428_add_role_and_user_roles.py
backend/auth/: __init__.py  config.py  deps.py  redis_client.py  routes.py  schemas.py  security.py  service.py
backend/chat/: __init__.py  routes.py  streaming.py
backend/db/: __init__.py  async_session.py  base.py  session.py
backend/models/: __init__.py  user.py
docker/postgres-pgvector/: docker-compose.yml
docker/redis/: docker-compose.yml  redis.conf
docs/api/: README.md  endpoints.md
docs/superpowers/plans/: 2026-06-12-react-frontend-chat.md  2026-06-12-weather-agent-backend.md  2026-06-13-frontend-stream-tasklist.md  2026-06-13-frontend-streaming-chat.md  2026-06-13-streaming-chat-endpoint.md  2026-06-13-weather-agent-tool-args-schema.md  2026-06-14-agent-loader.md  2026-06-14-agent-scaffold-script.md  2026-06-14-complex-task-detector.md  2026-06-16-frontend-auth-routing.md  2026-06-16-streaming-step-detail.md  2026-06-16-user-auth.md  2026-06-17-remove-tasklist-streaming-text.md  2026-06-19-frontend-api-alignment.md
docs/superpowers/specs/: 2026-06-12-react-frontend-chat-design.md  2026-06-12-weather-agent-backend-design.md  2026-06-13-frontend-stream-tasklist-design.md  2026-06-13-frontend-streaming-chat-design.md  2026-06-13-streaming-chat-endpoint-design.md  2026-06-13-weather-agent-tool-args-schema-design.md  2026-06-14-agent-loader-design.md  2026-06-14-agent-scaffold-script-design.md  2026-06-14-complex-task-detector-design.md  2026-06-16-frontend-auth-routing-design.md  2026-06-16-streaming-step-detail-design.md  2026-06-16-user-auth-design.md  2026-06-17-remove-tasklist-streaming-text-design.md  2026-06-19-frontend-api-alignment-design.md
frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/src/: App.tsx  AppRoutes.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: ChatInput.test.tsx  ChatInput.tsx  ChatWindow.tsx  EmptyState.tsx  LoadingScreen.tsx  MessageBubble.test.tsx  (+10 more)
jupyter/: agent.ipynb  main.ipynb  weather-agent.ipynb
scripts/: README.md  init_admin.py  new_agent.py
scripts/docker/: all.sh  pgvector.sh  redis.sh
tests/: __init__.py  conftest.py  test_agent_loader.py  test_auth.py  test_backend.py  test_imports.py  test_new_agent.py  test_security.py  test_service_misc.py  test_service_register_login.py
tests/agents/: test_code_agent.py
utils/: __init__.py  model_download.py
utils/langchain_model/: __init__.py  base.py  llm_factory.py
(+49 files in other folders)
