[project]
name = "myproject"
version = "0.1.0"
description = "A Python project"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.7",
    "langchain-nvidia-ai-endpoints>=1.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "redis[hiredis]>=5.0",
    "python-dotenv>=1.2.2",
    "deepagents>=0.6.11",
    "tavily-python>=0.7.26",
    "markdownify>=1.2.2",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ipykernel==6.30.1",
    "pytest-asyncio>=1.4.0",
    "aiosqlite>=0.22.1",
]


[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "backend*"]
exclude = ["jupyter*", "tests*"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
